<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/abstract_plant_bg"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/application_icon"
        android:src="@drawable/plant_logo"
        android:transitionName="iconLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.02"
    />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login_account"
        android:fontFamily="sans-serif-medium"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/image_view"
        app:layout_constraintEnd_toEndOf="@+id/image_view"
        app:layout_constraintTop_toBottomOf="@+id/image_view"
    />

    <com.bangkit2022.plantplanningyourplants.customview.AllEditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/email_address"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        custom:email="true"
    />

    <com.bangkit2022.plantplanningyourplants.customview.AllEditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        custom:password="true"
    />

    <com.bangkit2022.plantplanningyourplants.customview.AllButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_color_greenbg"
        android:text="@string/login"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"
    />

    <com.bangkit2022.plantplanningyourplants.customview.AllButton
        android:id="@+id/btn_register_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_color_greenout3"
        android:text="@string/register"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        custom:outlined="true"
    />
</androidx.constraintlayout.widget.ConstraintLayout>