<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abstract_plant_bg"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/plant_logo_image_picture"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:src="@drawable/plant_logo"
        tools:ignore="MissingConstraints"
    />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginTop="50dp"
        android:background="@color/dark_green"
        app:layout_constraintTop_toBottomOf="@+id/plant_logo_image_picture"
    />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:id="@+id/lets_come_check_and_identify_your_plants_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/lets_come_check_and_identify_your_plants"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/text_view"
        app:layout_constraintEnd_toEndOf="@+id/text_view"
        app:layout_constraintTop_toTopOf="@+id/text_view"
    />

    <Button
        android:id="@+id/lets_start_identifying_your_plants_button"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/light_green"
        android:text="@string/lets_start_identifying_your_plants"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/text_view"
        app:layout_constraintEnd_toEndOf="@+id/text_view"
        app:layout_constraintTop_toTopOf="@+id/lets_come_check_and_identify_your_plants_text_view"
    />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:id="@+id/p2p_market_feature_will_be_coming_soon_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/p2p_market_feature_will_be_coming_soon_text_view"
        android:textSize="17sp"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/text_view"
        app:layout_constraintEnd_toEndOf="@+id/text_view"
        app:layout_constraintTop_toTopOf="@+id/lets_start_identifying_your_plants_button"
    />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:id="@+id/you_can_contact_and_follow_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="90dp"
        android:text="@string/you_can_contact_and_follow_us"
        android:textSize="10sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="left"
        app:layout_constraintStart_toStartOf="@+id/text_view"
        app:layout_constraintEnd_toEndOf="@+id/text_view"
        app:layout_constraintTop_toTopOf="@+id/p2p_market_feature_will_be_coming_soon_text_view"
    />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textSize="10sp"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:gravity="left"
        app:layout_constraintStart_toStartOf="@+id/text_view"
        app:layout_constraintEnd_toEndOf="@+id/text_view"
        app:layout_constraintTop_toTopOf="@+id/you_can_contact_and_follow_us"
    />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:id="@+id/facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/facebook"
        android:textSize="10sp"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:gravity="left"
        app:layout_constraintStart_toStartOf="@+id/text_view"
        app:layout_constraintEnd_toEndOf="@+id/text_view"
        app:layout_constraintTop_toTopOf="@+id/email"
    />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:id="@+id/twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/twitter"
        android:textSize="10sp"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:gravity="left"
        app:layout_constraintStart_toStartOf="@+id/text_view"
        app:layout_constraintEnd_toEndOf="@+id/text_view"
        app:layout_constraintTop_toTopOf="@+id/facebook"
    />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:id="@+id/instagram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/instagram"
        android:textSize="10sp"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:gravity="left"
        app:layout_constraintStart_toStartOf="@+id/text_view"
        app:layout_constraintEnd_toEndOf="@+id/text_view"
        app:layout_constraintTop_toTopOf="@+id/twitter"
    />
</androidx.constraintlayout.widget.ConstraintLayout>