<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abstract_plant_bg"
    tools:context=".view.detail.PlantDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/text_view_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_preview"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/dark_green"
            android:gravity="center"
            tools:ignore="MissingConstraints"
        />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_color_greenout2"
            app:layout_constraintTop_toBottomOf="@id/text_view_preview">

            <ImageView
                android:id="@+id/image_view_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:src="@drawable/icon_placeholder"
            />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/gallery_button"
            style="@style/CardView.Light"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:backgroundTint="@color/light_green"
            android:text="@string/gallery"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/identification_button"
            app:layout_constraintTop_toTopOf="@+id/identification_button"
            app:layout_constraintBottom_toTopOf="@+id/plant_name_text_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
        />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="CAMERA"
            android:src="@drawable/ic_camera_alt"
            app:layout_constraintStart_toEndOf="@id/gallery_button"
            app:layout_constraintEnd_toStartOf="@id/identification_button"
            app:layout_constraintTop_toBottomOf="@+id/card_view"
            app:layout_constraintBottom_toTopOf="@+id/plant_name_text_view"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintVertical_bias="0.543"
        />

        <Button
            style="@style/CardView.Light"
            android:id="@+id/identification_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/identification"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:backgroundTint="@color/light_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view"
            app:layout_constraintBottom_toTopOf="@+id/plant_name_text_view"
        />

        <TextView
            android:id="@+id/plant_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_color_greenout"
            android:text="@string/plant_name"
            android:fontFamily="sans-serif-black"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/dark_green"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/identification_button"
        />

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/plant_description"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/dark_green"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/plant_name_text_view"
        />

        <TextView
            android:id="@+id/plant_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/button_color_green1"
            android:text="@string/this_feature_will_be_coming_soon"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/description_text_view"
        />

        <TextView
            android:id="@+id/latin_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/latin_plant_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/dark_green"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/plant_description_text_view"
        />

        <TextView
            android:id="@+id/plant_latin_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/button_color_green1"
            android:text="@string/this_feature_will_be_coming_soon"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/latin_name_text_view"
        />

        <TextView
            android:id="@+id/how_to_care_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/how_to_take_care_of_plant"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/dark_green"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/plant_latin_name_text_view"
        />

        <TextView
            android:id="@+id/how_to_care_of_plants_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/button_color_green1"
            android:text="@string/this_feature_will_be_coming_soon"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/how_to_care_text_view"
        />


        <TextView
            android:id="@+id/buy_location_maps_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/plant_buy_location_maps"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/dark_green"
            app:layout_constraintTop_toBottomOf="@+id/how_to_care_of_plants_text_view"
            tools:ignore="MissingConstraints"
        />

        <Button
            android:id="@+id/buy_location_maps_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:backgroundTint="@color/light_green"
            android:text="@string/click_to_check_location"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/buy_location_maps_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/how_to_care_of_plants_text_view"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>